# This file is part of ku.
#
# Copyright 2013 Marc-Antoine Perennou <Marc-Antoine@Perennou.com>
#
# ku is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# ku is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with ku.  If not, see <http://www.gnu.org/licenses/>.

# SUBDIRS = po

ACLOCAL_AMFLAGS  = -I m4 ${ACLOCAL_FLAGS}
AM_MAKEFLAGS = --no-print-directory
AM_DISTCHECK_CONFIGURE_FLAGS = \
	$(NULL)

AM_CPPFLAGS =                \
	-I$(srcdir)/src/core \
	-DKU_COMPILATION     \
	$(NULL)

EXTRA_DIST =       \
	autogen.sh \
	README     \
	$(NULL)

CLEANFILES =
SUFFIXES =

bin_PROGRAMS =
pkginclude_HEADERS =
lib_LTLIBRARIES =

noinst_PROGRAMS = 

TESTS = 

# Real stuff goes in these subfiles

include src/core.mk

include tests/core.mk

noinst_PROGRAMS += $(TESTS)

# Maintainance stuff

update-po:
	$(MAKE) -C po $@

release:
	$(MAKE) distcheck && \
	git commit -asm "Release $(PACKAGE_NAME) $(PACKAGE_VERSION)" && \
	git tag -sm "Release $(PACKAGE_NAME) $(PACKAGE_VERSION)" v$(PACKAGE_VERSION)

# Generate a ChangeLog file from 'git log'

dist-hook:
	@ if test -d "$(srcdir)/.git"; then \
	    echo Creating ChangeLog; \
	    cd "$(srcdir)"; \
	    ( \
	      echo -e '# Generated by Makefile. Do not edit.\n\n'; \
	      $(srcdir)/build-aux/missing --run git log --stat v2.2.1..; \
	    ) > ChangeLog.tmp; \
	    mv -f ChangeLog.tmp $(distdir)/ChangeLog; \
	    if test -f "ChangeLog.tmp"; then \
	        rm -f ChangeLog.tmp; \
	        echo Failed to generate ChangeLog >&2; \
	    fi; \
	else \
	    echo A git clone is required to generate a ChangeLog >&2; \
	fi
